<resources>
    <string name="app_name">REC TC Tracker</string>

    <string name="menu_list">Voyages TC</string>
    <string name="menu_ajout">Ajouter TC</string>
    <string name="menu_setting">Réglages</string>

    <string name="list_tc">Liste de camions en circulation</string>
    <string name="num_booking">Numéro Booking TC</string>
    <string name="num_tc_off">Numéro TC</string>
    <string name="num_tc_off_2">Numéro Deuxième TC</string>
    <string name="num_tc_item">MSDU1807661</string>
    <string name="but_addtc">Ajouter TC (Conteneur) </string>
    <string name="num_camion">Immatriculation du camion</string>
    <string name="num_camion_item">TG-2642-BF</string>
    <string name="progression"></string>
    <string name="fin_voyage">Voyage Terminé</string>
    <string name="chargement">Chargement...</string>
    <string name="dark_mode">Mode sombre</string>
    <string name="active_dark_mode">Activer mode sombre</string>
    <string name="apropos">Rec Logistics</string>
    <string name="qui_sommes_nous">Qui sommes-nous ?</string>
    <string name="score_quizz"></string>
    <string name="developper">Charmidez Assiobo</string>
    <string name="change_language_english">Choose English Language</string>
    <string name="change_language">Langue</string>
    <string name="tc_desc">Description du TC</string>
    <string name="btn_fini_itemview">Fin</string>
    <string name="btnSuivant">Suivant</string>
    <string name="maj">Mettre à Jour</string>
    <string name="importer"> Importation </string>
    <string name="exporter"> Exportation </string>

    <string name="bind_txt_tc">Veuiller renseigner le numéro Plomb TC</string>
    <string name="bind_num_vraie">Numéro Plomb du TC</string>

    <string name="ajout_bind_num_vraie">Ajouter le numéro Plomb TC</string>
    <string name="poursuivre_voyage_popup">Numéro Plomb enregistré avec succès</string>

    <string name="bind_txt_tc_second">Renseigner les numéro plomb des TC</string>
    <string name="bind_num_vraie_un">Numéro Plomb du TC 1</string>
    <string name="bind_num_vraie_second">Numéro Plomb du TC 2</string>

    <!--pop up-->
    <string name="titre_details_voyage">Details</string>
    <string name="num_phone">+228 90 02 56 54</string>
    <string name="num_plomb_vrai">78GT16</string>
    <string name="titre_etape_et_date">TC en chargement depuis ce 9/03/2023</string>

    <string name="phone_du_chauffeur">Numéro du chauffeur</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>