<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--item
        android:id="@+id/navigation_findtc"
        android:icon="@drawable/ic_finder"
        android:fontFamily="@font/source_sans_pro_bold"
        android:title="@string/menu_find_tc" /-->

    <item
        android:id="@+id/navigation_suivietc"
        android:icon="@drawable/ic_list"
        android:fontFamily="@font/source_sans_pro_bold"
        android:title="@string/menu_list" />

    <item
        android:id="@+id/navigation_ajoutertc"
        android:icon="@drawable/ic_upload"
        android:fontFamily="@font/source_sans_pro_bold"
        android:title="@string/menu_ajout" />

    <item
        android:id="@+id/navigation_reglages"
        android:icon="@drawable/ic_setting"
        android:fontFamily="@font/source_sans_pro_bold"
        android:title="@string/menu_setting" />

</menu>