<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_suivietc">

    <fragment
        android:id="@+id/navigation_suivietc"
        android:name="com.charmidezassiobo.tcrec.ui.suivietc.SuivietcFragment"
        android:label="@string/menu_list"
        android:fontFamily="@font/source_sans_pro_bold"
        tools:layout="@layout/fragment_suivietc" >
        <action
            android:id="@+id/action_navigation_suivietc_to_detailvoyagetcFragment"
            app:destination="@id/detailvoyagetcFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ajoutertc"
        android:name="com.charmidezassiobo.tcrec.ui.ajoutertc.AjoutertcFragment"
        android:label="@string/menu_ajout"
        android:fontFamily="@font/source_sans_pro_bold"
        tools:layout="@layout/fragment_ajoutertc" />

    <fragment
        android:id="@+id/navigation_reglages"
        android:name="com.charmidezassiobo.tcrec.ui.reglages.ReglagesFragment"
        android:label="@string/menu_setting"
        android:fontFamily="@font/source_sans_pro_bold"
        tools:layout="@layout/fragment_reglages" />
    <fragment
        android:id="@+id/detailvoyagetcFragment"
        android:name="com.charmidezassiobo.tcrec.ui.suivietc.DetailvoyagetcFragment"
        android:label="fragment_detailvoyagetc"
        tools:layout="@layout/fragment_detailvoyagetc" >
        <action
            android:id="@+id/action_detailvoyagetcFragment_to_navigation_suivietc"
            app:destination="@id/navigation_suivietc" />
    </fragment>
</navigation>