<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/all_padding"
    tools:context=".ui.ajoutertc.AjoutertcFragment">

    <TextView
        android:id="@+id/titreajouter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/all_padding"
        android:fontFamily="@font/source_sans_pro_bold"
        android:text="Ajout de TC ( Conteneur)"
        android:background="@drawable/rounded_white_background"
        android:textColor="@color/white"
        android:textSize="26dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Label Booking -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldBookingNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num_booking"
        app:boxBackgroundColor="@color/gray"
        app:hintTextColor="@color/black"
        android:layout_marginTop="@dimen/all_margin"
        app:startIconDrawable="@drawable/ic_bk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titreajouter"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputBookingNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:inputType="textCapCharacters"
            android:background="@drawable/rounded_editable_text"
            android:textColor="@color/blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Label Num Tc -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTcNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num_tc_off"
        app:startIconDrawable="@drawable/ic_tc"
        app:boxBackgroundColor="@color/gray"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/all_margin"
        app:layout_constraintTop_toBottomOf="@+id/textFieldBookingNum"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputTcNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_editable_text"
            android:textAllCaps="true"
            android:inputType="textCapCharacters"
            android:textColor="@color/blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Label Immatriculation -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldCamionNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num_camion"
        app:boxBackgroundColor="@color/gray"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_cam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/all_margin"
        app:layout_constraintTop_toBottomOf="@+id/textFieldTcNum"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputCamionNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_editable_text"
            android:textAllCaps="true"
            android:inputType="textCapCharacters"
            android:textColor="@color/blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ajouteTcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:backgroundTint="@color/blue"
        android:background="@drawable/rounded_corner_view"
        android:textColor="@color/white"
        android:text="@string/but_addtc"
        android:fontFamily="@font/source_sans_pro_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldCamionNum" />

</androidx.constraintlayout.widget.ConstraintLayout>