<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/gray"
    app:cardCornerRadius="16dp"
    android:layout_marginTop="@dimen/all_margin_demi"
    android:layout_marginRight="@dimen/all_margin"
    android:layout_marginLeft="@dimen/all_margin"
    android:layout_marginBottom="@dimen/all_margin_demi">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/all_padding">

        <TextView
            android:id="@+id/txtView_pop_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/bind_txt_tc"
            android:textColor="@color/gray2"
            android:textSize="16dp"
            android:layout_marginBottom="@dimen/all_margin"
            app:layout_constraintBottom_toTopOf="@+id/textFieldBindNum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldBindNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bind_num_vraie"
            app:boxBackgroundColor="@color/gray"
            app:boxStrokeColor="@color/gray"
            app:hintTextColor="@color/grisabsolut"
            android:layout_marginBottom="@dimen/all_margin"
            app:layout_constraintBottom_toTopOf="@+id/btn_recup_bind_tc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_tc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputBindNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_editable_text"
                android:inputType="textCapCharacters"
                android:textAllCaps="true"
                android:textColor="@color/textColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_recup_bind_tc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajout_bind_num_vraie"
            android:paddingLeft="@dimen/all_padding"
            android:paddingRight="@dimen/all_padding"
            android:background="@drawable/btn_drawable_red"
            android:fontFamily="@font/source_sans_pro_bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--View
            android:id="@+id/view_fin"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" /-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

